css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

$em-base: 18px;
@import '../bourbon/_bourbon';

// Spacing
$modular-scale-ratio: $major-third;
$spacing-unit: 1em;
$wrapper-width: em(1100);


// Media Queries 

$small-screen: "screen";
$medium-screen: "screen and (min-width: 640px)";
$large-screen: "screen and (min-width: 1024px)";
$xlarge-screen: "screen and (min-width: 1200px)";



// Fonts
$base-font-family: "nimbus-sans",sans-serif;
$base-font-style: normal;
$base-font-weight: 400;

$header-font-family: "nimbus-sans-condensed", sans-serif;
$header-font-style: normal;
$header-font-weight: 700;

@mixin font-and-line ($scale-number, $line-height: 1) {
    $modular-scale: modular-scale($scale-number);
    font-size: $modular-scale;
    line-height: 1;
}



// Colors

$red: #c52033;
$gray: #666;
$silver: #e5e5e5;

$primary-color: $red;
$primary-color-darker: darken($red, 10%);
$secondary-color: $gray;
$tertiary-color: $silver;
$shadow: rgba(black, 0.2);
$highlight: rgba(white, 0.2);

@import "reset";

%base-font {
    // font-family: $base-font-family;
    // font-style: $base-font-style;
    // font-weight: $base-font-weight; 
    font-family: $header-font-family;
    font-style: $header-font-style;
    font-weight: 400;
}

%pull-quote-font {
    font-family: $header-font-family;
    font-style: $header-font-style;
    font-weight: 400;
}

%header-font {
    font-family: $header-font-family;
    font-style: $header-font-style;
    font-weight: $header-font-weight;
    text-transform: uppercase;
}

%clearfix {
  @include clearfix;
}

body {
    background-color: $tertiary-color;
    @include linear-gradient(to bottom, $secondary-color 0%, $tertiary-color 50%, $tertiary-color 100%, $fallback: $tertiary-color);
    background-repeat: repeat-x;
    background-size: 100% 640px;
    @extend %base-font;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    font-size: $em-base;
}

a {
    color: $primary-color;
    text-decoration: none;
    &:hover, &:focus {
        color: $primary-color-darker;
    }
}

strong, b {
    font-weight: 700;
}

img {
    max-width: 100%;
    height: auto;
}

// ie8 hack
@media \0screen {
  img { 
    width: auto; /* for ie 8 */
  }
}

// hiding elements for screen reader usage only
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    border: 0;
}

.container {
    position: relative;
    max-width: em(1200);
    margin: 0 auto;
    box-shadow: 0 0 1px 0px $shadow;
    background-color: white;
}

.wrapper {
    @extend %clearfix;
    padding-left: $spacing-unit;
    padding-right: $spacing-unit;
    max-width: $wrapper-width;
    margin-left: auto;
    margin-right: auto;
}

.columns {
    margin-left: -$spacing-unit;
    margin-right: -$spacing-unit;
    @extend %clearfix;
    > li {
        float: left;
        width: 100%;
        padding-left: $spacing-unit;
        padding-right: $spacing-unit;
        box-sizing: border-box;
    }
    &.two-columns > li {
        @media #{$medium-screen} {
            width: 50%;
        }
    }
    &.three-columns > li {
        @media #{$medium-screen} {
            width: 33.3333333333%;
        }
    }
    &.four-columns > li {
        @media #{$large-screen} {
            width: 25%;
        }
    }
}

%header-style {
    @extend %header-font;
    padding-bottom: $spacing-unit/2;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit/2;
}

.page-header {
    @extend %header-style;
    color: $primary-color;
    @include font-and-line(1, 0.5);
    @media #{$medium-screen} {
        @include font-and-line(3, 0.5);
    }
    border-bottom: 1px solid $shadow;
}

.page-subheader {
    @extend %header-style;
    color: $secondary-color;
    @include font-and-line(1, 0.5);
    @media #{$medium-screen} {
        @include font-and-line(2, 0.5);
    }
    border-bottom: 1px dashed $shadow;
}

.site-header {
    background-color: $primary-color;
    box-shadow: 0 0 1px 0 $highlight;
    > .wrapper {
        position: relative;
    }
}

.main {
    min-height: em(662);
}

$site-logo-width: em(200px);
$site-logo-height: em(220px);

.site-title {
    display: inline-block;
    position: absolute;
    z-index: 3;
    left: $spacing-unit;
    top: 0;
    width: $site-logo-width;
    height: $site-logo-height;
    background: white url('../images/Cahaba-Pressure-Logo-2-Color-Large-with-Treated-Forest-Products.png') center center no-repeat;
    background-size: 100%;
    @include border-bottom-radius(5px);
    box-shadow: 1px 1px 10px 0px rgba(black,0.33);
}

.site-nav-primary {
    @extend %clearfix;
    margin-left: $spacing-unit+$site-logo-width;
    //background-color: $primary-color;
    //color: white;
    > li {
        float: left;
        display: inline-block;
    }
}



.site-nav-link {
    @extend %header-font;
    display: inline-block;
    padding: ($spacing-unit/2);
    color: white;
    text-decoration: none;
    font-size: modular-scale(2);
    text-transform: uppercase;
    @include transition(background-color 200ms linear);
    &:hover, &:focus {
        color: white;
        background-color: $shadow;
    }
}

%standard-font-size {
    font-size: modular-scale(0);
    line-height: modular-scale(0)*1.2;
    @media #{$medium-screen} {
        font-size: modular-scale(1);
        line-height: modular-scale(1)*1.2;    
    }
    @media #{$large-screen} {
        font-size: modular-scale(0);
        line-height: modular-scale(0)*1.2; 
    }
    @media #{$xlarge-screen} {
        font-size: modular-scale(1);
        line-height: modular-scale(1)*1.2; 
    }
}

%list-style {
    list-style-position: inside;
    padding-left: $spacing-unit*0.5;
    padding-bottom: $spacing-unit*0.5;
    font-size: 1em;
    > li {
        @extend %standard-font-size;
    }
}

%larger-font-size {
    font-size: modular-scale(1);
    line-height: modular-scale(0)*1.2;
    @media #{$medium-screen} {
        font-size: modular-scale(2);
        line-height: modular-scale(1)*1.2;
    }
    @media #{$large-screen} {
        font-size: modular-scale(1);
        line-height: modular-scale(0)*1.2;
    }
    @media #{$xlarge-screen} {
        font-size: modular-scale(2);
        line-height: modular-scale(1)*1.2;
    }
}

.page-content {
    p {
        @extend %standard-font-size;
        margin-bottom: $spacing-unit*0.5;
    }
    .page-header + p {
        @extend %pull-quote-font;
        @extend %larger-font-size;
    }
    h2 {
        @extend .page-subheader;
    }
    ul:not(.menu):not(.columns) {
        @extend %list-style;
        list-style-type: circle;
    }
    ol:not(.menu):not(.columns) {
        @extend %list-style;
        list-style-type: decimal;
    }
    strong, b {
        text-transform: uppercase;
    }
    .menu {
        @extend .columns;
        @extend .three-columns;
        &:hover,&:focus {
            > li > a:after {
                opacity: 0.5;
            }
        }
        > li {
            margin-bottom: $spacing-unit*2;
        }
        > li > a {
            @extend %larger-font-size;
            position: relative;
            display: block;
            &:after {
                content: '';
                background-color: white;
                width: 100%;
                height: 0;
                padding-bottom: 33.3333333333%;
                position: absolute;
                left: 0;
                top: 0;
                opacity: 0;
                @include transition(opacity 200ms linear);
            }
            &:hover, &:focus {
                &:after {
                    opacity: 0;
                }
            }
        }
    }
}

.page {
    &.with-sidebar {
        > .page-content {
            padding-right: $spacing-unit*2;
        }
        $sidebar-width: 33%;
        @media #{$large-screen} {
            float: left;
            width: (100% - $sidebar-width);
            & + .sidebar {
                float: right;
                width: $sidebar-width;
                
            }
        } // end @media
    }
}

.sidebar-container {
    margin-top: $spacing-unit*2;
    padding: $spacing-unit;
    border-radius: 5px;
    background-color: $tertiary-color;
    > .page-subheader:first-child {
        margin-top: 0;
    }
    > .menu {
        font-size: modular-scale(1);
        > li > a {
            display: block;
            padding-top: $spacing-unit*0.25;
            padding-bottom: $spacing-unit*0.25;
        }
    }
}

.site-footer {
    background-color: $secondary-color;
    margin-top: $spacing-unit*2;
    padding-top: $spacing-unit;
    padding-bottom: $spacing-unit;
    color: $tertiary-color;
}

.hero-wrapper {
    background-color: $tertiary-color;
    //@include linear-gradient(to bottom, lighten($secondary-color, 20%), $secondary-color, $fallback: $secondary-color);
    background-repeat: repeat-x;
    background-size: 100%;
    min-height: ($site-logo-height - $spacing-unit*4);
    position: relative;
    @media #{$medium-screen} {
        &:after {
            content: '';
            position: absolute;
            left: 0;
            right: 0;
            bottom: 0;
            height: 50px;
            z-index: 3;
            background: url("../images/curve.svg") center bottom no-repeat;
            background-size: fit;
        }
    }
}

@include keyframes(fadeIn) {
  from {
    @include transform(translateY(-50px));
    opacity: 0;
  }
  to {
    @include transform(translateY(0));
    opacity: 1;
  }
}

@mixin animation-fadedown($delay) {
  // Apply the fadeIn keyframes. Each animation 
  // will take 0.3s and have an ease-in-out
  @include animation(fadeIn 900ms ease-in-out);
  // This animation should only play once
  @include animation-iteration-count(1);
  // Make sure the element maintains it's 
  // final visual state (i.e. 100% opacity)
  @include animation-fill-mode(forwards);
  // Delay - don't start the animation until we say so
  @include animation-delay($delay);
}

.hero {
    > figcaption {
        text-transform: uppercase;
        padding: $spacing-unit;
        color: white;
        @media #{$medium-screen} {
            position: absolute;
            z-index: 3;
            font-size: modular-scale(1);
            background-color: rgba(white, .75);
            letter-spacing: 0.1em;
            color: $primary-color;
            padding: 1rem;
            opacity: 0;
            @include animation-fadedown(0);
            top: $spacing-unit*2;
            right: 0;
        }
        @media #{$large-screen} {
            font-size: modular-scale(2);
        }
        @media #{$xlarge-screen} {
            font-size: modular-scale(3);
        }
    }
}

.slideshow {
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  padding-bottom: 33.333333%;
  background-color: $gray;
  > li {
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    opacity: 0;
    img {
      width: 100%;
      height: auto;
    }
    &:not(.slide-next) {
      @include transition(opacity 200ms linear);
    }
    &.slide-current {
      z-index: 1;
      opacity: 1;
    }
    &.slide-next {
      z-index: 2;
      opacity: 0;
    }
  }
}

